--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -6,6 +6,7 @@
     "content": "المحتوى"
   },
   "actions": {
-    "login": "تسجيل الدخول"
+    "login": "تسجيل الدخول",
+    "logout": "تسجيل الخروج"
   }
 }
